@@ -7,7 +7,6 @@
 #include "ol_player_mpd.h"
 #include "ol_player.h"
 #include "ol_elapse_emulator.h"
-#include "ol_config.h"
 #include "ol_utils.h"
 #include "ol_debug.h"
 
@@ -45,7 +44,6 @@ static gboolean ol_player_mpd_prev (void);
 static gboolean ol_player_mpd_next (void);
 static gboolean ol_player_mpd_seek (int pos_ms);
 static gboolean ol_player_mpd_init (void);
-static void config_change_handler (OlConfig *config, gchar *group, gchar *name, gpointer userdata);
 static const char *_get_icon_path (void);
 
 static gboolean
@@ -156,13 +154,14 @@ ol_player_mpd_ensure_connection ()
 static gboolean
 ol_player_mpd_init ()
 {
-  OlConfig *config = ol_config_get_instance ();
-  hostname = ol_config_get_string (config, "Player", "mpd-hostname");
+  hostname = g_strdup (getenv ("MPD_HOST"));
   if (hostname == NULL)
     hostname = g_strdup (DEFAULT_HOSTNAME);
-  port = ol_config_get_int (config, "Player", "mpd-port");
-  if (port == 0)
+  char *portenv = getenv ("MPD_PORT");
+  if (portenv == NULL)
     port = DEFAULT_PORT;
+  else
+    port = atoi (portenv);
   mpd = mpd_new (hostname, port, NULL);
   if (mpd == NULL)
   {
@@ -260,33 +259,6 @@ ol_player_mpd_seek (int pos_ms)
     return FALSE;
   mpd_player_seek (mpd, pos_ms / 1000);
   return TRUE;
-}
-
-static void
-config_change_handler (OlConfig *config, gchar *group, gchar *name, gpointer userdata)
-{
-  ol_log_func ();
-  ol_debugf ("  [%s]%s\n", group, name);
-  if (strcmp (name, "mpd-hostname") == 0)
-  {
-    ol_debugf ("  mpd-hostname: %s\n", ol_config_get_string (config, group, name));
-    if (hostname != NULL)
-      g_free (hostname);
-    hostname = ol_config_get_string (config, group, name);
-    if (hostname == NULL)
-      hostname = g_strdup (DEFAULT_HOSTNAME);
-    if (mpd != NULL)
-      mpd_set_hostname (mpd, hostname);
-  }
-  if (strcmp (name, "mpd-port") == 0)
-  {
-    ol_debugf ("  mpd-port: %d\n", ol_config_get_int (config, group, name));
-    port = ol_config_get_int (config, group, name);
-    if (port == 0)
-      port = DEFAULT_PORT;
-    if (mpd != NULL)
-      mpd_set_port (mpd, port);
-  }
 }
 
 static const char *
